--- a/index.html
+++ b/index.html
@@ -1,53 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head> 
+<head>
+    <!--Cabeçalho-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <script src="./js/action.js"></script>
     <title>Página de Start BCW18</title>
 </head>
 
-<body>
+<body style="font-family: roboto;">
     <header>
         <nav>
-            <a href="#somos">Quem somos nestes <strong>BCW18</strong></a> |
+            <a href="#somos">Quem somos neste <strong>BCW18</strong></a> |
             <a href="#cronograma">Cronograma do <strong>BCW18</strong>.</a> |
             <a href="#dicas">Dicas do team <strong>BCW18</strong>.</a> |
-            <a href="#trabalho">Orientacoes de Trabalho como Dev.</a>
+            <a href="#trabalho">Orientações de Trabalho como Dev.</a>
         </nav>
-        <ul>
-            <li>Quem somos neste <strong>BCW18</strong>.</li>
-            <ul>
-                <li>Alunos</li>
-                <li>Lideres/Professores</li>
-            </ul>
-            <li>Cronograma do <strong>BCW18</strong>.</li>
-            <li>Dicas do team <strong>BCW18</strong>.</li>   
-        </ul>
-            <li>Orientacoes de Trabalho como Dev.</li>
-        </ul>
     </header>
     <main>
         <div style="width: 650px;">
-            <h1>Trajetoria de Sucesso</h1>
-            <hr>
-            <p id="somos" style="height: 450px;">
-                <h3><strong>Fase 1:</strong></h3> Inscrição no site oficial, execução do teste de logica,
-                curso da trilha zero e montagem do Pitch.
-            </p>
-            <p id="cronograma" style="height: 450px;">
-                <h3><strong>Fase 2:</strong></h3> Testes trilha zero e entrevista com recrutador para avaliação
-                nesta fase se analisa a elegibilidade para a bolsa de estudos perante os clientes. 
-            </p>
-            <p id="dicas" style="height: 450px;">
-                <h3><strong>Fase 3:</strong></h3> Dinamica em grupo com a realizaçao de teste online e 
-                    convocaçao de alunos aprovados.
-                </p>
+            <h1>Trajetória de Sucesso</h1>
+            <table>
+                <tr>
+                    <th> <strong>FASE</strong> </th>
+                    <th> <strong>Descrição</strong> </th>
+                    <th> <strong>Imagem</strong> </th>
+                </tr>
+                <tr>
+                    <td>Primeira</td>
+                    <td>
+                        Inscrição no site oficial, execução do teste de lógica,
+                        curso da trilha zero e montagem do Pitch.
+                    </td>
+                    <td>
+                        <figure>
+                            <img src="./img/img3.jpg" alt="Ato de inscrição na SoulCode" width="180px"
+                                height="180px">
+                            <figcaption>Fig.1 - Ato de inscrição na SoulCode</figcaption>
+                        </figure>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Segunda</td>
+                    <td>
+                        Testes trilha zero e entrevista com recrutador para avaliação de bolsa,
+                        nesta fase se analisa a elegibilidade para a bolsa de estudos
+                        perante os clientes e o candidato.
+                    </td>
+                    <td>
+                        <figure>
+                            <img src="./img/img1.jpg" alt="Testes de Lógica para seleção" width="180px"
+                                height="180px">
+                            <figcaption>Fig.2 - Hora do lanche, estudar e descansar</figcaption>
+                        </figure>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Terceira</td>
+                    <td>
+                        Dinâmica em grupo com a realização de teste on-line e
+                        convocação dos alunos aprovados.
+                    </td>
+                    <td>
+                        <figure>
+                            <img src="./img/img2.jpg" alt="Aprovação e convocação." width="180px" height="180px">
+                            <figcaption>Fig.3 - Aprovação modulo final SoulCode.</figcaption>
+                        </figure>
+                    </td>
+                </tr>
+            </table>
         </div>
-
+        <div>
+        </div>
     </main>
     <footer>
 
