Atualizacao de formularios e estrutura base Get e Post

--- a/index.html
+++ b/index.html
@@ -77,7 +77,44 @@
             </table>
         </div>
         <div>
-        </div>
+            <form action="#" method=" ">
+                <div>
+                    <label for="nome"> Nome: </label>
+                    <input type="text" id="nome" placeholder="Entre com o seu nome">
+                </div>
+
+                <div>
+                    <label for="email">E-mail: </label>
+                    <input type="email" id="e-mail" placeholder="Entre com seu e-mail">
+                </div>
+
+                <div>
+                    <label for="nascimento">Data de nascimento</label>
+                    <input type="date" id="nascimento">
+                </div>
+
+                <div>
+                    <input type="checkbox" id="deficiencia" checked>
+                    <label for="deficiencia">Deficiencia: </label>
+                </div>
+                <div>
+                    <label for="senha">senha: </label>
+                    <input type="password" id="senha" placeholder="Entre com a senha" maxlength="14">
+                </div>
+                <div>
+                    <label for="educacao">Nivel escolar</label> <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="F1"> Fundamental <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="M1"> Medio <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="B1"> Bacharel <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="T1"> Tecnologo <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="L1"> Licenciado <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="P1"> Pos graduado <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="P2"> Mestrado <br>
+                    <input type="radio" name="escolaridade" id="escolaridade" value="P3"> Doutorado <br>
+                </div>
+
+            </form>
+            </div>
     </main>
     <footer>
 
